# national-movie-database

./: .editorconfig  .env.sh  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  Makefile  README.md  compose.debug.yml  compose.yml  docker-compose.yml  post_save.txt  pyproject.toml  requirements.txt  setup.py
apiv1/: serializers.py  urls.py  views.py  views2.py  views_old.py
assets/scripts/: buy.js  payments.js
core/: context_processors.py  middleware.py  settings.py  urls.py
locales/sq_AL/LC_MESSAGES/: django.po
movies/: admin.py  apps.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
movies/migrations/: 0001_initial.py  0002_director_movie.py  0003_alter_actor_table_alter_director_table_and_more.py  0004_director_bio_director_birthdate_director_photo_and_more.py  0005_review.py  0006_review_is_approved.py  0007_review_content.py  0008_movie_slug.py  0009_alter_director_options_alter_director_bio_and_more.py  0010_genre_movie_genre.py  0011_alter_movie_slug.py  0012_movie_seats_purchase.py  0013_movie_price.py  0014_remove_purchase_user.py  0015_purchase_quantity.py
movies/templatetags/: pagination_extras.py
pages/: admin.py  models.py  urls.py  views.py
pages/migrations/: 0001_initial.py
requirements/: common.txt  dev.txt  development.txt  main.txt  prod.txt  test.txt  testing.txt
src/nmdb/: manage.py
templates/: _base.html
users/: admin.py  decorators.py  forms.py  managers.py  models.py
users/migrations/: 0001_initial.py  0002_remove_user_username_alter_user_email.py  0003_alter_user_managers.py
(+113 files in other folders)
